@@ -1,8 +1,8 @@
 Package: sensR
 Type: Package
 Title: Thurstonian models for sensory discrimination
-Version: 1.4-1
-Date: 2014-06-25
+Version: 1.4-2
+Date: 2014-07-08
 Authors@R: c(person(given="Rune Haubo Bojesen", family="Christensen",
 	   email="rhbc@dtu.dk", role=c("aut", "cre")),
 	   person(given="Per Bruun", family="Brockhoff",
@@ -11,8 +11,9 @@ Imports: multcomp, MASS, numDeriv
 Suggests: ordinal, parallel, testthat (>= 0.8)
 ByteCompile: yes
 Description: Provides methods for sensory discrimination methods;
-  duotrio, tetrad, triangle, 2-AFC, 3-AFC, A-not A, same-different and
-  2-AC. This enables the calculation of d-primes, standard errors of
+  duotrio, tetrad, triangle, 2-AFC, 3-AFC, A-not A, same-different,
+  2-AC and degree-of-difference.
+  This enables the calculation of d-primes, standard errors of
   d-primes, sample size and power computations, and
   comparisons of different d-primes. Methods for profile likelihood
   confidence intervals and plotting are included.
